cmake_minimum_required(VERSION 3.22)
project(CppStudy)
set(CMAKE_CXX_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/opt)
#aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/test_case SRC)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src/calc/include)
link_libraries(calc)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src/lib)
add_executable(tests main.cpp)